Cambiando la interfaz como esta en figma

--- a/src/layout/footer/Footer.css
+++ b/src/layout/footer/Footer.css
@@ -1,5 +1,5 @@
 .footer {
-    background-color: #2a5c82;
+    background-color: #6085A2;
     padding: 1.5rem;
     text-align: center;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
