Corrección del Index
Se corrige el index para permitir la navegación por la página y las lecciones.

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,9 @@
-html,
-body,
+html, body {
+    height: auto;
+    min-height: 100%;
+    overflow-x: hidden;
+  }
+  
 #root {
     margin: 0;
     padding: 0;
