--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,12 @@
 html, body {
-    height: auto;
-    min-height: 100%;
+    height: 100%;
+    padding: 0;
+    margin: 0;
     overflow-x: hidden;
   }
   
 #root {
-    margin: 0;
-    padding: 0;
+    height: 100%;
     width: 100%;
     user-select: none;
     overflow: hidden;
