--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -7,7 +7,7 @@
 .top-section {
     width: 100%;
     min-height: 55vh;
-    background: #6085A2; 
+    background: #95AEC1; 
     display: flex; 
     justify-content: space-around;
     align-items: center;
