--- a/src/pages/liver/Liver.css
+++ b/src/pages/liver/Liver.css
@@ -34,7 +34,7 @@
     margin: 0;
     font-size: 1.8rem;
     font-weight: bold;
-    color: #007491;
+    color: #2a5c82;
 }
 
 .model-display-section {
