Se hicieron cambios en la vista de hepatitis viral, se actualizaron los botones, tambien la presentacion de texto y las instrucciones, tambien se realizo una pequeña modificacion en el incio y se implemento las migaja de pan para tener una mejor navegacion y para que el usuario sepa donde esta

--- a/src/index.css
+++ b/src/index.css
@@ -20,19 +20,18 @@ h1{
 }
 
 span{
-    font-size: large;
     color: #2b3133;
 }
 
 p {
     font-size: medium;
     color: #2b3133;
+    line-height: 1.5;
     /*color: #2b3133;*/
 }
 
 a {
     color: whitesmoke;
-    font-size: medium;
     text-decoration: none;
 }
 
