--- a/src/layout/Layout.css
+++ b/src/layout/Layout.css
@@ -1,12 +1,12 @@
 .layout {
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-    width: 100%;
+  display: flex;
+  flex-direction: row;
+  min-height: 100vh;
+  width: 100%;
 }
 
 .layout-content {
-    text-align: center;
-    width: 100%;
-    flex: 1;
+  text-align: center;
+  width: 100%;
+  flex: 1;
 }
