--- a/src/layout/header/Header.css
+++ b/src/layout/header/Header.css
@@ -25,188 +25,6 @@ body {
   min-width: 100vh;
 }
 
-/* sidebar estilos */
-.sidebar {
-  width: var(--sidebar-width);
-  background-color: var(--sidebar-bg);
-  color: var(--text-light);
-  box-shadow: 0 2px 5px 10px rgba(0, 0, 0, 0.15);
-  transition: left 0.3s ease;
-  height: 100vh;
-  position: fixed;
-  left: 0;
-  top: 0;
-  display: flex;
-  flex-direction: column;
-  padding: 0.5rem 0;
-  z-index: 100;
-}
-
-.sidebar.hidden{
-  left: -280px;
-  transition: left 0.3s ease;
-}
-.sidebar.active {
-  left: 0;
-}
-
-.sidebar-button-container {
-  display: flex;
-  margin-bottom: 1rem ;
-}
-
-.sidebar-button {
-  background: transparent;
-  justify-content: center;
-  border: none;
-  display: flex;
-  cursor: pointer;
-  margin-left:  12.3rem;
-  border-radius: 30px;
-  align-items: center;
-  padding: 0;
-  width: 47px;
-  height: 47px;
-
-}
-
-.sidebar-icon-back{
-  font-size: 2.3rem;
-  color: rgb(51, 51, 51);
-  padding: 0;
-  margin: 0;
-}
-
-.sidebar-button:hover {
-  background-color: #95aec1;
-  box-shadow: 0 2px 5px 5px rgba(0, 0, 0, 0.05);
-  color: #CAD7E0;
-}
-
-
- 
-.sidebar-logo {
-  padding: 1rem;
-  text-align: center;
-  margin-bottom: 2rem;
-  
-}
-
-.sidebar-logo img {
-  width: 80%;
-  height: auto;
-  
-}
-
-.sidebar-menu {
-  display: flex;
-  flex-direction: column;
-  border-top: 0.2px solid var(--border-color);
-  
-}
-
-/* Sub Menu */
-
-.sidebar-item-with-submenu{
-  display: flex;
-  flex-direction: column;
-}
-
-.submenu-trigger {
-  display: flex;
-  align-items: center;
-  padding: 0.75rem 1rem;
-  color: rgb(51, 51, 51);
-  text-decoration: none;
-  margin: 0;
-  transition: all 0.2s ease;
-  border-bottom: 0.2px solid var(--border-color);
-  cursor: pointer;
-  justify-content: space-between;
-  padding-top: 20px;
-  padding-bottom: 20px;
-}
-
-.submenu-trigger:hover {
-  background-color: var(--sidebar-active);
-  border-left: 3px solid var(--border-color);
-  box-shadow: 0 2px 5px 10px rgba(0, 0, 0, 0.05);
-  color: #F2F5F8;
-}
-
-.submenu-icon {
-  margin-left: auto;
-  font-size: 1.2rem;
-}
-
-.submenu {
-  max-height: 0;
-  overflow: hidden;
-  transition: max-height 0.3s ease-out;
-  background-color: #95aec1;
-}
-
-.submenu.open {
-  max-height: 500px;
-  transition: max-height 0.5s ease-in;
-}
-
-.submenu-item {
-  display: flex;
-  align-items: center;
-  padding: 0.5rem 1rem 0.5rem 3rem;
-  color: rgb(51, 51, 51);
-  text-decoration: none;
-  transition: all 0.2s ease;
-}
-
-.submenu-item:hover,
-.submenu-item:active {
-  background-color: var(--sidebar-active);
-  color: #F2F5F8;
-}
-
-/* Menu */
-
-.sidebar-item {
-  display: flex;
-  align-items: center;
-  padding: 0.75rem 1rem;
-  color: #ffffff;
-  text-decoration: none;
-  margin: 0.25rem 0;
-  transition: all 0.2s ease;
-  border-color: #333333;
-  border-bottom: 0.2px solid var(--border-color);
-  align-items: center;
-  margin-top: 0;
-  margin-bottom: 0;
-  padding-top: 20px;
-  padding-bottom: 20px;
-}
-
-.sidebar-item i {
-  margin-right: 10px;
-  font-size: 1.2rem;
-}
-
-.sidebar-item:hover,
-.sidebar-item.active {
-  background-color: var(--sidebar-active);
-  border-left: 3px solid var(--border-color);
-  box-shadow: 0 2px 5px 10px rgba(0, 0, 0, 0.05);
-  color: #F2F5F8;
-
-}
-
-.sidebar-icon{
-  width: 23px;
-  height: 23px;
-  margin-left: 10px;
-  margin-bottom: 0.1rem;
-  margin-right: 20px;
-}
-
 /* Header estilos*/
 
 .main-container{
@@ -214,6 +32,11 @@ body {
   display: flex;
   flex-direction: column;
   transition: margin-left 0.3s ease;
+  margin-left: 0;
+}
+
+.main-container.menu-open {
+  margin-left: var(--sidebar-width);
 }
 
 .header {
@@ -225,6 +48,34 @@ body {
   justify-content: space-between;
   padding-right: 5rem ;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.05);
+}
+
+.header-left {
+  padding-left: 10px;
+  display: flex;
+  align-items: center;
+  gap: 50px;
+}
+
+.home-header-button {
+  background: none;
+  border: none;
+  cursor: pointer;
+  margin-right: 1rem;
+  display: flex;
+  align-items: center;
+}
+
+.logo-header {
+  width: 30px;
+  height: 30px;
+}
+
+.logo-text-header {
+  width: 68px;
+  height: 68px;
+  margin-left: 0.5rem;
+
 }
 
 .hamburger-menu {
